# simd-normalizer

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
benches/: bench.rs  movemask.rs  perf_driver.rs
docs/: perf-audit-2026-04-19.md  perf-counters-2026-04-22.md
examples/: basic_normalization.rs  case_folding.rs  confusable_detection.rs  normalize_file.rs  text_matching.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_casefold.rs  fuzz_confusable.rs  fuzz_cross_form.rs  fuzz_differential.rs  fuzz_matching.rs  fuzz_nfc.rs  fuzz_nfd.rs  fuzz_nfkc.rs  fuzz_nfkd.rs
scripts/: check.sh  generate_tables.py  perf_counters.sh  plot_throughput.py
src/: casefold.rs  ccc.rs  compose.rs  confusable.rs  decompose.rs  hangul.rs  lib.rs  matching.rs  normalizer.rs  quick_check.rs  tables_ext.rs  utf8.rs
src/simd/: dispatch_tests.rs  mod.rs  prefetch.rs  scalar.rs  scanner.rs
src/simd/aarch64/: mod.rs  neon.rs  sve2.rs
src/simd/wasm32/: mod.rs  simd128.rs
src/simd/x86_64/: avx2.rs  avx512.rs  consistency_tests.rs  mod.rs  sse42.rs
src/tables/: casefold.rs  ccc.rs  ccc_qc.rs  composition.rs  confusable.rs  decomposition.rs  mod.rs  qc.rs  trie.rs
tests/: api.rs  casefold.rs  ccc_ordering_edge_cases.rs  composition_exclusions.rs  conformance.rs  confusable.rs  cross_form_invariants.rs  differential.proptest-regressions  differential.rs  differential_icu4x.rs  dispatch_consistency.rs  empty_input_contract.rs  exhaustive.rs  icu4x_edge_cases.rs  matching.rs  matching_edge_cases.rs  multilingual.rs  normalize_to_contract.rs  normalizer_tests.rs  panic_safety_sweeps.rs  perf_regression.rs  properties.proptest-regressions  properties.rs  quick_check_fastpath_equivalence.rs  quick_check_safe_bytes.rs  script_coverage.rs  simd_boundaries.rs  special_chars.rs  supplementary_edge_cases.rs  table_validation.rs  thread_safety.rs  trait_equivalence.rs  unicode_norm_compat.rs  utf16_matching_edge_cases.rs
tests/data/: mod.rs  normalization_tests.rs
