[package]
name = "simd-normalizer"
version = "0.1.0"
edition = "2024"
description = "SIMD-accelerated Unicode normalization (NFC, NFD, NFKC, NFKD)"
license = "Apache-2.0"
readme = "README.md"
keywords = ["unicode", "normalization", "simd", "nfc", "nfd"]
categories = ["text-processing", "no-std"]
# `benches/perf_driver.rs` is a [[bin]] (perf-counter driver), not a bench.
# Disable auto-bench discovery so Cargo doesn't double-register the file.
autobenches = false

[features]
default = ["std"]
std = ["alloc"]
alloc = []
# Re-exports crate-private table accessors for integration tests. Not for
# downstream use; semver-exempt; may change or disappear without warning.
internal-test-api = []

[dev-dependencies]
proptest = "1"
unicode-normalization = "0.1"
icu_normalizer = "2.2"
simdutf8 = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }
simd-normalizer = { path = ".", features = ["internal-test-api"] }

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "perf_driver"
path = "benches/perf_driver.rs"
bench = false
test = false
doc = false
