[package]
name = "simd-normalizer"
version = "0.1.1"
edition = "2024"
rust-version = "1.91"
description = "SIMD-accelerated Unicode normalization (NFC, NFD, NFKC, NFKD)"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/DevExzh/simd-normalizer"
documentation = "https://docs.rs/simd-normalizer"
keywords = ["unicode", "normalization", "simd", "nfc", "nfd"]
categories = ["text-processing", "no-std"]
exclude = [
    "/3rdparty/",
    "/.github/",
    "/.worktrees/",
    "/.claude/",
    "/benches/",
    "/docs/",
    "/fuzz/",
    "/scripts/",
    "/test-data/",
    "/tests/data/",
]
# `benches/perf_driver.rs` is a [[bin]] (perf-counter driver), not a bench.
# Disable auto-bench discovery so Cargo doesn't double-register the file.
autobenches = false

[features]
default = ["std"]
std = ["alloc"]
alloc = []
# Re-exports crate-private table accessors for integration tests. Not for
# downstream use; semver-exempt; may change or disappear without warning.
internal-test-api = []
# Forces quick_check_impl onto the pre-classifier decode path so the
# differential proptest can compare Layer-1+2 output against the oracle.
# Not for downstream use; semver-exempt.
quick_check_oracle = []

[dev-dependencies]
proptest = "1"
unicode-normalization = "0.1"
icu_normalizer = "2.2"
simdutf8 = "0.1"
criterion = { version = "0.8", features = ["html_reports"] }
simd-normalizer = { path = ".", features = ["internal-test-api"] }

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "movemask"
harness = false

[[bin]]
name = "perf_driver"
path = "benches/perf_driver.rs"
bench = false
test = false
doc = false
