[package]
name = "simd-normalizer-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
simd-normalizer = { path = ".." }

[[bin]]
name = "fuzz_nfc"
path = "fuzz_targets/fuzz_nfc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_nfd"
path = "fuzz_targets/fuzz_nfd.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_nfkc"
path = "fuzz_targets/fuzz_nfkc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_nfkd"
path = "fuzz_targets/fuzz_nfkd.rs"
test = false
doc = false
bench = false

# Work around https://github.com/rust-lang/cargo/issues/8338
# Keeps this crate out of the parent workspace so parent `cargo build`
# is unaffected and the fuzz crate's std-using deps don't leak in.
[workspace]
